# book-rating-prediction

./: .gitignore  README.md  pyproject.toml  sources.txt
src/: eval.py  mnb.py
src/PredictRating/: baseline.py  bertstats.py  constants.py  humanlevel.py  train.py
src/PredictRating/classes/: basenet.py  bertnet.py  customdataset.py  data.py  tokenize.py
tests/: test_all.py  tests.py
